Fixed pollution pop up grid layout issue

--- a/src/views/DataArchive/Modals/Pollution/TableView/styles.scss
+++ b/src/views/DataArchive/Modals/Pollution/TableView/styles.scss
@@ -4,7 +4,7 @@
     :global {
         .table {
             white-space: nowrap;
-            height: 300px;
+            max-height: 300px;
             .header {
                 border: 1px solid black;
                 background-color: var(--color-foreground-alt);
