--- a/src/views/DataArchive/Modals/Pollution/styles.scss
+++ b/src/views/DataArchive/Modals/Pollution/styles.scss
@@ -10,7 +10,7 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             // border: 2px solid red;
-            height: 50%;
+            min-height: 350px;
             & > * {
                 // border: 1px solid red;
                 border: 1px solid rgba($color: #000000, $alpha: 0.5);
